Fixed some issues with font weight and text alignment

--- a/resources/css/aboutus.css
+++ b/resources/css/aboutus.css
@@ -35,10 +35,11 @@ body {
 .c1-frame h1 {
     grid-row: 1/2;
     grid-column: 1/2;
-    font-size: 43.5px;
+    font-size: 40px;
     box-sizing: border-box;
     margin-top: 18.75px;
     margin-bottom: 18.75px;
+    font-weight: 600;
 }
 
 .c1-frame p {
@@ -101,5 +102,6 @@ body {
         font-size: 16px;
         grid-row: 3 / 4;
         padding: 10px 0px;
+        text-align: center;
     }
 }
